--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,10 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+# DS_Store
+.DS_Store
+sompy/.DS_Store
+
 # local files
 data/acs.est.8b01452.pdf
 data/es8b01452_si_001.pdf
