--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,6 @@ sompy/.DS_Store
 # local files
 data/acs.est.8b01452.pdf
 data/es8b01452_si_001.pdf
+data/es8b01452_si_002.xlsx
+data/~$es8b01452_si_002.xlsx
+write_files/
