--- a/.gitignore
+++ b/.gitignore
@@ -112,4 +112,5 @@ data/acs.est.8b01452.pdf
 data/es8b01452_si_001.pdf
 data/es8b01452_si_002.xlsx
 data/~$es8b01452_si_002.xlsx
-write_files/
+Data/for Andi
+write_files/*
