--- a/.gitignore
+++ b/.gitignore
@@ -112,5 +112,7 @@ data/acs.est.8b01452.pdf
 data/es8b01452_si_001.pdf
 data/es8b01452_si_002.xlsx
 data/~$es8b01452_si_002.xlsx
+data/bafu*
 Data/for Andi
 write_files/*
+
