--- a/.gitignore
+++ b/.gitignore
@@ -108,14 +108,7 @@ venv.bak/
 sompy/.DS_Store
 
 # local files
-data/acs.est.8b01452.pdf
-data/es8b01452_si_001.pdf
-data/~$es8b01452_si_002.xlsx
-data/bafu*
-Data/for Andi
-write_files/*
-global_settings.json
-data_private
-files_private
-code_Andi
+dev/write_files
+data/habe20092011_hh_prepared_imputed.csv
+data/pp_to_bp_exiobase.m
 .idea/
