--- a/.gitignore
+++ b/.gitignore
@@ -108,7 +108,7 @@ venv.bak/
 sompy/.DS_Store
 
 # local files
-dev/write_files
+dev/write_files/
 data/habe20092011_hh_prepared_imputed.csv
 data/pp_to_bp_exiobase.m
 .idea/
