--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@ data/habe20092011_hh_prepared_imputed.csv
 data/other/
 .idea/
 Old_setup_config_files/
+consumption_model_ch/data/Consumption_model_update_151617_backup_no_priceconversion_update.xlsx
